--- a/templates/community/detail.html
+++ b/templates/community/detail.html
@@ -141,7 +141,7 @@
                 </div>
 
                 <div class="enrollmentBox">
-                    <b>ddbbnncc87</b>
+{#                    <b>ddbbnncc87</b>#}
                     <textarea></textarea>
                     <button><mark>등록</mark></button>
                 </div>
