--- a/templates/usedtrade/index.html
+++ b/templates/usedtrade/index.html
@@ -5,7 +5,8 @@
             <ul class="usedTradeBox fontCase01">
                 <li>
                     <a href="">
-                        <div class="imgBox borderBox" style="background-image: url('../../static/images/realTime01.png');">
+                        <div class="imgBox borderBox"
+                             style="background-image: url('../../static/images/realTime01.png');">
                             실시간 인기 중고 이미지
                         </div>
                         <p>
@@ -32,7 +33,8 @@
                 </li>
                 <li>
                     <a href="">
-                        <div class="imgBox borderBox" style="background-image: url('../../static/images/realTime01.png');">
+                        <div class="imgBox borderBox"
+                             style="background-image: url('../../static/images/realTime01.png');">
                             실시간 인기 중고 이미지
                         </div>
                         <p>
@@ -59,7 +61,8 @@
                 </li>
                 <li>
                     <a href="">
-                        <div class="imgBox borderBox" style="background-image: url('../../static/images/realTime01.png');">
+                        <div class="imgBox borderBox"
+                             style="background-image: url('../../static/images/realTime01.png');">
                             실시간 인기 중고 이미지
                         </div>
                         <p>
@@ -86,7 +89,8 @@
                 </li>
                 <li>
                     <a href="">
-                        <div class="imgBox borderBox" style="background-image: url('../../static/images/realTime01.png');">
+                        <div class="imgBox borderBox"
+                             style="background-image: url('../../static/images/realTime01.png');">
                             실시간 인기 중고 이미지
                         </div>
                         <p>
@@ -113,7 +117,8 @@
                 </li>
                 <li>
                     <a href="">
-                        <div class="imgBox borderBox" style="background-image: url('../../static/images/realTime01.png');">
+                        <div class="imgBox borderBox"
+                             style="background-image: url('../../static/images/realTime01.png');">
                             실시간 인기 중고 이미지
                         </div>
                         <p>
@@ -140,7 +145,9 @@
                 </li>
             </ul>
             <div class="pageBox">
-                <a href="#"><mark>&lt;</mark>이전</a>
+                <a href="#">
+                    <mark>&lt;</mark>
+                    이전</a>
                 <ol>
                     <li class="active"><a href="#">1</a></li>
                     <li><a href="#">2</a></li>
@@ -149,7 +156,9 @@
                     <li><a href="#">5</a></li>
                     <li><a href="#">6</a></li>
                 </ol>
-                <a href="#">다음<mark>&gt;</mark></a>
+                <a href="#">다음
+                    <mark>&gt;</mark>
+                </a>
                 <button class="writeBtn">작성하기</button>
             </div>
             <div class="seachBox">
@@ -158,4 +167,5 @@
             </div>
         </section>
     </div>
+
 {% endblock %}
