oneroom index added address, deposit

--- a/templates/oneroom/detail.html
+++ b/templates/oneroom/detail.html
@@ -12,7 +12,7 @@
                         <td colspan="2">
                             <div>
                                 <strong>
-                                    월세 <b>200 / 40만원</b>
+                                    월세 <b>{{ data.0.deposit }} / {{ data.0.rent_amount }}만원</b>
                                 </strong>
                             </div>
                         </td>
