원룸 메인 원룸이름 추가

--- a/templates/oneroom/detail.html
+++ b/templates/oneroom/detail.html
@@ -28,7 +28,7 @@
                             <div>
                                 <p>
                                     <small>한달 예상 주거비</small>
-                                    <mark>40만원 + a</mark>
+                                    <mark>{{ data.0.rent_amount }}만원 + a</mark>
                                 </p>
                                 <button data-popup="contact_popup">연락처 보기</button>
                                 <div class="contact_popup">
