--- a/static/css/global.css
+++ b/static/css/global.css
@@ -83,7 +83,8 @@ mark > *{color: #ff9900;}
 .imgRegiBox > .fileArea .imgBox .removeBtn{position: absolute; right: -6px; top: -6px; width: 20px; line-height: 20px; text-align: center; background-color: black; border-radius: 100%; font-size: 20px; color: white; font-weight: 900;}
 
 /* 중고거래 리스트*/
-.usedTradeBox{display: flex; flex-wrap: wrap; justify-content: space-between;}
+.usedTradeBox{display: flex; flex-wrap: wrap; justify-content: flex-start;}
+.usedTradeBox li { margin: 0 5px; }
 .usedTradeBox li a{width: 100%; margin-bottom: 20px;}
 .usedTradeBox li a .imgBox{width: 100%; margin-bottom: 20px;}
 
